--- a/estilo.css
+++ b/estilo.css
@@ -18,7 +18,7 @@ body{
     width: 300px;
     height: 280px;
     border-radius: 50%;
-    background: url(IMG_2179.PNG);
+    background: url(bab.png);
     background-size: cover;
     box-shadow: 0px 0px 20px #3a86ff, -25px -25px 30px black inset,0px 0px 25px #fff inset;
     animation: rotacionar 20s linear infinite;
